[project]
name = "bq-mcp-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "google-adk[agent-identity]>=2.1.0",
    "google-auth>=2.53.0",
    "google-api-core",
    "a2a-sdk>=0.3.4,<0.4",
    "google-genai",
    "mcp>=1.27.1",
    "google-cloud-aiplatform[agent_engines]",
    "pyyaml",
    "cloudpickle",
]
